--- a/style.css
+++ b/style.css
@@ -1,59 +1,62 @@
-header{
-    display: block;
-    margin: 0 auto;
-    width: 500px;
-    text-align: center;
+/**
+ * Created by liuyubobobo on 14-4-11.
+ * my site: http://www.liuyubobobo.com
+ */
+
+ header{
+    display:block;
+    margin:0 auto;
+    width:500px;
+    text-align:center;
 }
 
 header h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 60px;
-    font-weight: bold;
+    font-family:Arial;
+    font-size:60px;
+    font-weight:bold;
 }
 
-header #newGameButton{
-    display: block;
-    margin: 20px auto;
-    
-    width: 100px;
-    padding: 10px 10px;
-    background-color: #8f7a66;
+header #newgamebutton{
+    display:block;
+    margin:20px auto;
 
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    width:100px;
+    padding:10px 10px;
+    background-color:#8f7a66;
 
-    border-radius: 10px;;
+    font-family:Arial;
+    color:white;
 
-    text-decoration: none;
+    border-radius:10px;
+    text-decoration:none;
 }
-
-header #newGameButton:hover{
-    background-color: #9f8b77;
+header #newgamebutton:hover{
+    background-color:#9f8b77;
 }
 
 header p{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    margin: 20px auto;
+    font-family:Arial;
+    font-size:25px;
+    margin:20px auto;
 }
 
 #grid-container{
-    width: 460px;
-    height: 460px;
-    padding: 20px;
+    width:460px;
+    height:460px;
+    padding:20px;
 
-    margin: 50px auto;
-    background-color: #bbada0;
+    margin:50px auto;
+    background-color:#bbada0;
 
     border-radius: 10px;
     position: relative;
 }
 
 .grid-cell{
-    width: 100px;
-    height: 100px;
+    width:100px;
+    height:100px;
     border-radius: 6px;
-    background-color: #ccc0b3;
+    background-color:#ccc0b3;
 
     position: absolute;
 }
@@ -61,12 +64,11 @@ header p{
 .number-cell{
     border-radius: 6px;
 
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    font-size: 60px;
-    line-height: 100px;
-    text-align: center;
+    font-family: Arial;
+    font-weight:bold;
+    font-size:60px;
+    line-height:100px;
+    text-align:center;
 
-    position: absolute;
+    position:absolute;
 }
-
