touch-action：none

--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
  * Created by liuyubobobo on 14-4-11.
  * my site: http://www.liuyubobobo.com
  */
+body{
+    touch-action: none;
+}
 
- header{
+header{
     display:block;
     margin:0 auto;
     width:100%;
